cmake_minimum_required(VERSION 3.23)
project(cppExam)

set(CMAKE_CXX_STANDARD 14)

add_executable(exp2_1 ch2/exp2_1.cpp)
add_executable(exp2_2 ch2/exp2_2.cpp)
add_executable(exp2_3 ch2/exp2_3.cpp)
add_executable(exp2_4 ch2/exp2_4.cpp)
add_executable(exp2_5 ch2/exp2_5.cpp)
add_executable(exp2_6 ch2/exp2_6.cpp)
add_executable(exp2_7 ch2/exp2_7.cpp)
add_executable(exp2_8 ch2/exp2_8.cpp)
add_executable(exp2_9 ch2/exp2_9.cpp)
add_executable(exp2_10 ch2/exp2_10.cpp)
add_executable(exp2_11 ch2/exp2_11.cpp)
add_executable(exp2_12 ch2/exp2_12.cpp)
add_executable(exp2_13 ch2/exp2_13.cpp)
add_executable(exp2_14 ch2/exp2_14.cpp)
add_executable(exp2_15 ch2/exp2_15.cpp)
add_executable(exp2_16 ch2/exp2_16.cpp)
add_executable(exp2_17 ch2/exp2_17.cpp)
add_executable(exp2_18 ch2/exp2_18.cpp)
add_executable(exp3_1 ch3/exp3_1.cpp)
add_executable(exp3_2 ch3/exp3_2.cpp)
add_executable(exp3_3 ch3/exp3_3.cpp)
add_executable(pra3_1 ch3/pra3_1.cpp)
add_executable(pra3_2 ch3/pra3_2.cpp)
add_executable(pra3_3 ch3/pra3_3.cpp)
add_executable(pra3_4 ch3/pra3_4.cpp)
add_executable(exp3_4 ch3/exp3_4.cpp)
add_executable(exp3_5 ch3/exp3_5.cpp)
add_executable(pra3_5 ch3/pra3_5.cpp)
add_executable(pra3_6 ch3/pra3_6.cpp)
add_executable(pra3_7 ch3/pra3_7.cpp)
add_executable(exp4_1 ch4/exp4_1.cpp)
add_executable(exp4_2 ch4/exp4_2.cpp)
add_executable(exp4_3 ch4/exp4_3.cpp)
add_executable(exp4_4 ch4/exp4_4.cpp)
add_executable(exp4_5 ch4/exp4_5.cpp)
add_executable(pra4_1 ch4/pra4_1.cpp)
add_executable(pra4_2 ch4/pra4_2.cpp)
add_executable(pra4_3 ch4/pra4_3.cpp)
add_executable(pra4_4 ch4/pra4_4.cpp)
add_executable(pra4_5 ch4/pra4_5.cpp)
add_executable(exp4_6 ch4/exp4_6.cpp)
add_executable(exp4_7 ch4/exp4_7.cpp)
add_executable(pra4_6 ch4/pra4_6.cpp)
add_executable(pra4_7 ch4/pra4_7.cpp)
add_executable(exp5_1 ch5/exp5_1.cpp)
add_executable(exp5_2 ch5/exp5_2.cpp)
add_executable(exp5_3 ch5/exp5_3.cpp)
add_executable(exp5_4 ch5/exp5_4.cpp)
add_executable(exp5_5 ch5/exp5_5.cpp)
add_executable(exp5_6 ch5/exp5_6.cpp)
add_executable(pra5_1 ch5/pra5_1.cpp)
add_executable(pra5_2 ch5/pra5_2.cpp)
add_executable(exp6_1 ch6/exp6_1.cpp)
add_executable(exp6_2 ch6/exp6_2.cpp)
add_executable(test test.cpp)
add_executable(exp6_3 ch6/exp6_3.cpp)
add_executable(exp6_4 ch6/exp6_4.cpp)
add_executable(pra6_1 ch6/pra6_1.cpp)
add_executable(pra6_2 ch6/pra6_2.cpp)
add_executable(pra6_3 ch6/pra6_3.cpp)
add_executable(pra6_4 ch6/pra6_4.cpp)
add_executable(exp6_5 ch6/exp6_5.cpp)
add_executable(exp6_6 ch6/exp6_6.cpp)
add_executable(pra6_5 ch6/pra6_5.cpp)
add_executable(exp6_7 ch6/exp6_7.cpp)
add_executable(exp6_8 ch6/exp6_8.cpp)
add_executable(pra6_6 ch6/pra6_6.cpp)
add_executable(exp6_9 ch6/exp6_9.cpp)
add_executable(pra6_7 ch6/pra6_7.cpp)
add_executable(pra6_8 ch6/pra6_8.cpp)
add_executable(exp6_10 ch6/exp6_10.cpp)
add_executable(pra6_9 ch6/pra6_9.cpp)
add_executable(exp6_11 ch6/exp6_11.cpp)
add_executable(exp6_12 ch6/exp6_12.cpp)
add_executable(pra6_10 ch6/pra6_10.cpp)
add_executable(pra6_11 ch6/pra6_11.cpp)
add_executable(exp ch6/exp.cpp)
add_executable(exp6_13 ch6/exp6_13.cpp)
add_executable(exp6_14 ch6/exp6_14.cpp)
add_executable(pra6_12 ch6/pra6_12.cpp)
add_executable(pra6_13 ch6/pra6_13.cpp)
add_executable(exp7_1 ch7/exp7_1.cpp)
add_executable(exp7_2 ch7/exp7_2.cpp)
add_executable(exp7_3 ch7/exp7_3.cpp)
add_executable(pra7_1 ch7/pra7_1.cpp)
add_executable(exp7_4 ch7/exp7_4.cpp)
add_executable(exp7_5 ch7/exp7_5.cpp)
add_executable(pra7_2 ch7/pra7_2.cpp)
add_executable(exp8_1 ch8/exp8_1.cpp)
add_executable(exp8_2 ch8/exp8_2.cpp)
add_executable(pra8_2 ch8/pra8_2.cpp)
add_executable(exp8_3 ch8/exp8_3.cpp)
add_executable(exp8_4 ch8/exp8_4.cpp)
add_executable(pra8_3 ch8/pra8_3.cpp)
add_executable(exp9_1 ch9/exp9_1.cpp)
add_executable(exp9_2 ch9/exp9_2.cpp)
add_executable(pra9_1 ch9/pra9_1.cpp)
add_executable(exp9_3 ch9/exp9_3.cpp)
add_executable(exp9_4 ch9/exp9_4.cpp)
add_executable(pra9_2 ch9/pra9_2.cpp)
add_executable(pra9_3 ch9/pra9_3.cpp)
add_executable(exp10_1 ch10/exp10_1.cpp)
add_executable(exp10_2 ch10/exp10_2.cpp)
add_executable(exp10_3 ch10/exp10_3.cpp)
add_executable(exp10_4 ch10/exp10_4.cpp)
add_executable(pra10_1 ch10/pra10_1.cpp)
add_executable(exp10_5 ch10/exp10_5.cpp)
add_executable(exp10_6 ch10/exp10_6.cpp)
add_executable(pra10_2 ch10/pra10_2.cpp)
add_executable(pra10_3 ch10/pra10_3.cpp)
add_executable(exp10_7 ch10/exp10_7.cpp)
add_executable(exp10_8 ch10/exp10_8.cpp)
add_executable(exp10_9 ch10/exp10_9.cpp)
add_executable(pra10_4 ch10/pra10_4.cpp)
add_executable(pra10_5 ch10/pra10_5.cpp)
add_executable(pra10_6 ch10/pra10_6.cpp)
add_executable(exp11_1 ch11/exp11_1.cpp)
add_executable(exp11_2 ch11/exp11_2.cpp)
add_executable(exp11_3 ch11/exp11_3.cpp)
add_executable(pra11_1 ch11/pra11_1.cpp)
add_executable(pra11_2 ch11/pra11_2.cpp)
add_executable(pra11_3 ch11/pra11_3.cpp)
add_executable(exp11_4 ch11/exp11_4.cpp)
add_executable(exp11_5 ch11/exp11_5.cpp)
add_executable(pra11_4 ch11/pra11_4.cpp)
add_executable(pra11_5 ch11/pra11_5.cpp)
add_executable(exp11_6 ch11/exp11_6.cpp)
add_executable(exp11_7 ch11/exp11_7.cpp)
add_executable(pra11_6 ch11/pra11_6.cpp)
add_executable(pra11_7 ch11/pra11_7.cpp)
add_executable(exp11_8 ch11/exp11_8.cpp)
add_executable(exp11_9 ch11/exp11_9.cpp)
add_executable(exp11_10 ch11/exp11_10.cpp)
add_executable(exp11_11 ch11/exp11_11.cpp)
add_executable(exp12_1 ch12/exp12_1.cpp)
add_executable(pra12_1 ch12/pra12_1.cpp)
add_executable(exp12_2 ch12/exp12_2.cpp)
add_executable(exp12_3 ch12/exp12_3.cpp)
add_executable(pra12_2 ch12/pra12_2.cpp)
add_executable(exp12_4 ch12/exp12_4.cpp)
add_executable(exp12_5 ch12/exp12_5.cpp)
add_executable(pra12_3 ch12/pra12_3.cpp)
add_executable(exp12_6 ch12/exp12_6.cpp)
add_executable(pra12_4 ch12/pra12_4.cpp)
add_executable(exp12_7 ch12/exp12_7.cpp)
add_executable(pra12_5 ch12/pra12_5.cpp)
add_executable(pra12_6 ch12/pra12_6.cpp)
add_executable(exp12_8 ch12/exp12_8.cpp)
add_executable(exp12_9 ch12/exp12_9.cpp)
add_executable(exp12_10 ch12/exp12_10.cpp)
add_executable(exp12_11 ch12/exp12_11.cpp)
add_executable(pra12_7 ch12/pra12_7.cpp)
add_executable(pra12_8 ch12/pra12_8.cpp)
add_executable(pra1 hust/pra1.cpp)
add_executable(pra2 hust/pra2.cpp)
add_executable(pra3 hust/pra3.cpp)
add_executable(pra4 hust/pra4.cpp)
add_executable(pra5 hust/pra5.cpp)
add_executable(pra6 hust/pra6.cpp)
add_executable(pra7 hust/pra7.cpp)
add_executable(pra8 hust/pra8.cpp)
add_executable(pra9 hust/pra9.cpp)
add_executable(pra10 hust/pra10.cpp)
add_executable(pra11 hust/pra11.cpp)
add_executable(pra12 hust/pra12.cpp)
add_executable(pra13 hust/pra13.cpp)
add_executable(pra14 hust/pra14.cpp)
add_executable(pra15 hust/pra15.cpp)
add_executable(pra16 hust/pra16.cpp)
add_executable(pra17 hust/pra17.cpp)
add_executable(pra18 hust/pra18.cpp)
add_executable(pra19 hust/pra19.cpp)